  number of nodes exceeding the reference value and the number of early backtracks -- path switches in the tree when
  a child node with lower bound smaller than the reference value was available.
- add new presolving step to disaggregate second order cone constraints
- added reading capabilities for partial solutions with extension *.mst
- new heuristic that tries to complete partial solutions

parameters:
- new parameter "solvingphases/enabled" to activate adaptive behavior during the solution process; several further parameters
  in the solvingphases-section to control how to switch the parameters, and whether a restart should be performed between the phases.
- new parameter misc/referencevalue to pass a reference value for further analysis of the tree search, see also in 'features'
- new parameter sepaperspective to turn on separation of perspective cuts for indicator contraints
- new parameter sepapersplocal to decide whether local cuts can be used for perspective cuts for indicator contraints
- new parameter branching/relpscost/usesmallweightsitlim to use smaller weights for pseudo cost updates when LP iteration limit was hit
- new parameter lp/randomseed to set the initial seed of the LP solver

performance improvements:
- adjusted most Large Neighborhood Search heuristics such that they collect their variable fixings first in an array,
  and only create and populate a sub-SCIP if enough variables will be fixed.
- SCIP supports constraint compression for problem copies; constraint compression denotes the immediate
  removal of fixed variables from constraint data at creation time to reduce memory requirements.
- changed value of parameter separating/clique/cliquedensity to 0.0 such that the separator always constructs a dense clique table
  which proved to be faster on the benchmarks MMM and stableset.

interface:
- new library methods SCIPenableConsCompression(), SCIPisConsCompressionEnabled(), SCIPcopyConsCompression(), SCIPcopyOrigConsCompression()