@@ -8832,7 +8832,7 @@ SCIP_RETCODE SCIPlpCreate(
    (*lp)->lastlpalgo = SCIP_LPALGO_DUALSIMPLEX;
    (*lp)->lpithreads = set->lp_threads;
    (*lp)->lpitiming = (int) set->time_clocktype;
-   (*lp)->lpirandomseed = set->lp_randomseed;
+   (*lp)->lpirandomseed = set->random_randomseed;
    (*lp)->storedsolvals = NULL;
 
    /* allocate arrays for diving */
@@ -13824,7 +13824,7 @@ SCIP_RETCODE lpSolveStable(
    SCIP_CALL( lpSetLPInfo(lp, set->disp_lpinfo) );
    SCIP_CALL( lpSetConditionLimit(lp, set->lp_conditionlimit, &success) );
    SCIP_CALL( lpSetTiming(lp, set->time_clocktype, set->time_enabled, &success) );
-   SCIP_CALL( lpSetRandomseed(lp, set->lp_randomseed, &success) );
+   SCIP_CALL( lpSetRandomseed(lp, set->random_randomseed, &success) );
    SCIP_CALL( lpAlgorithm(lp, set, stat, lpalgo, resolve, keepsol, timelimit, lperror) );
    resolve = FALSE; /* only the first solve should be counted as resolving call */
 
